--- a/less/mixins.less
+++ b/less/mixins.less
@@ -26,6 +26,12 @@
     }
 }
 
+.fixed-nav-bar {
+    position: fixed;
+    top: 0;
+    opacity: .5;
+}
+
 .button-style(@button-background; @button-font-color; @button-radius;) {
     width: 80px;
     text-align: center;
